fix(SplitPage): image area background color while loading in dark mode

--- a/scss/components/_split-page.scss
+++ b/scss/components/_split-page.scss
@@ -10,7 +10,7 @@
     align-content: stretch;
     align-items: stretch;
     align-self: stretch;
-    background-color: lightgrey;
+    background-color: var(--accent-color);
     display: flex;
     position: relative;
 
